<resources>
    <string name="app_name">ighubChurchApp</string>
    <string name="weeklyact">WEEKLY ACTIVITIES</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="day">DAY</string>
    <string name="activity">ACTIVITY</string>
    <string name="time">TIME</string>
    <string name="deliverance">DELIVERANCE SERVICE</string>
    <string name="biblestudy">BIBLE STUDY</string>
    <string name="holyghost">HOLY GHOST SERVICE </string>
    <string name="pastorik">Pastor IK</string>
    <string name="pastorcaleb">Pastor Caleb</string>
    <string name="pastorken">Pastor Ken</string>
    <string name="pastorjosh">Pastor Josh</string>

    <string name="login">Login</string>
    <string name="register1">Registration</string>
    <string name="tithe">Tithe/Offering</string>
    <string name="weekly">Weekly Activity</string>
    <string name="help">Help</string>
    <string name="about">About Us</string>
    <string name="vpastor">View Pastors</string>
    <string name="click">CLICK HERE</string>
    <string name="password">Password</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="church">CHURCH</string>
    <string name="registrationType">SELECT REGISTRATION TYPE</string>
    <string name="pastor">PASTOR</string>
    <string name="member">MEMBER</string>

    <string name="surname">Surname :</string>
    <string name="first_name">First Name :</string>
    <string name="other_name">Other Name(s) :</string>
    <string name="age">Age :</string>
    <string name="email">Email Address :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="date_of_birth">Date Of Birth : </string>
    <string name="permanent_address">Permanent Address :</string>
    <string name="state_of_origin">State Of Origin :</string>
    <string name="lga">L.G.A :</string>
    <string name="nationality">Nationality :</string>
    <string name="residential_address">Residential Address :</string>
    <string name="register">REGISTER</string>
    <string name="newMember_form">Membership Form</string>
    <string name="ighub_church">Ighub Church</string>
    <string name="day1">DD</string>
    <string name="month">MM</string>
    <string name="year">YY</string>
    <string name="import_image">Import Image</string>
    <string name="submit">SUBMIT</string>
    <string name="id">ADMIN ID :</string>
    <string name="admin_details">Admin Details</string>
    <string name="home_page">Click here to go to Home Page</string>
    <string name="not_registered">Not registered?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="aboutUs">ABOUT US</string>
    <string name="forgotten">Forgotten Password?</string>
    <string name="history">OUR HISTORY</string>
    <string name="history1">This church was established in the year 2018 by Pastor Favour Obiajulu.</string>
    <string name="believe">OUR BELIEVE</string>
    <string name="believe1">We believe in Christ Jesus We believe that the entire Scripture,
        both Old and New Testament are written by the inspiration of the
        Holy Spirit – II Tim. 3:16-17. All the Christian teachings and the Christian attitude
        of the Children of God are such as are established in the Holy Bible – II Tim. 3:10-15;
        II Peter 1:21; John 17:17; Ps. 119:105.
        We believe that the Bible is the written and revealed Will of God.
        Man’s position to God, the way to obtain salvation, woe and destruction awaiting
        sinners that refuse to repent and everlasting joy that is kept for the born again souls.
        All the Bible teachings are holy, what the Bible reveals as the will of God are such that
        we should accept, and whatever God writes in the Bible and His Law are to remain unchangeable;
        for the Heavens and Earth may pass away but the Word of God stands forever. Deut. 4:22;
        Rev. 22:18, 19; Matt. 24:34-38.</string>
    <string name="missionAndVision">MISSION AND VISION</string>
    <string name="mission">To make heaven.
        To take as many people with us.
        To accomplish holiness will be our lifestyle.
        We will pursue these objectives until every Nation in the world is reached for
        the Lord Jesus Christ</string>
    <string name="contact">CONTACT US: 08139264713, 07067464298</string>
    <string name="emailH">EMAIL: oguerichidinmab@gmail.com</string>
    <string name="location">OUR ADDRESS: OCHIRIOZUO HOUSE 62, Asa road by Ehi road, Aba,Abia state.</string>
    <string-array name="gender">
        <item name="gender">Select Gender</item>
        <item name="male">Male</item>
        <item name="female">Female</item>
    </string-array>
    <string-array name="marital_status">
        <item name="marital_status">Select Marital Status</item>
        <item name="single">Single</item>
        <item name="married">Married</item>
    </string-array>

    <string name="pastor_detail">PASTOR DETAILS</string>
    <string name="brief_detail">BRIEF DETAILS</string>


</resources>
