<?xml version="1.0" encoding="utf-8"?>
<ScrollView
<<<<<<< HEAD
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

=======
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
>>>>>>> 77d1ae67715a1a45578e30fca5cdeac0db11a624
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">
        <TableLayout
            android:id="@+id/table"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margin"
            android:background="@drawable/litegreenflower">

            <TableRow style="@style/margin"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/weeklyact"
                    style="@style/text"
                    />

            </TableRow>
            <TableRow
                style="@style/margin">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/day"
                    style="@style/headtext"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/activity"
                    style="@style/headtext"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/time"
                    style="@style/headtext"
                    />
            </TableRow>
            <TableRow
                style="@style/margin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/monday"
                    style="@style/smalltext"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="DELIVERANCE SERVICE"
                    style="@style/smalltext" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="8am"
                    style="@style/smalltext"/>
            </TableRow>
            <TableRow
                style="@style/margin">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/wednesday"
                    style="@style/smalltext"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/biblestudy"
                    style="@style/smalltext" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="6am"
                    style="@style/smalltext"/>
            </TableRow>
            <TableRow
                style="@style/margin">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/sunday"
                    style="@style/smalltext"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/holyghost"
                    style="@style/smalltext" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="9am"
                    style="@style/smalltext"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>

</ScrollView>