<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/mycolour1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/contact"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/location"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/emailH"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>
