<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/design2"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:src="@drawable/ighubchurch"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginBottom="8dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
           >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/history"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history1"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"/>

        </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/missionAndVision"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mission"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="2dp"/>

        </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/believe"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/believe1"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="2dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>
