<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.henry.ighubchurchapp.MemberLoginPage"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ighubchurch"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/curve"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:drawableEnd="@drawable/email"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/etPassword"
                android:textColorHint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/curve"
                android:padding="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawableEnd="@drawable/key"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@drawable/button"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="4dp">
                <TextView
                    android:id="@+id/tvNotRegistered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered"/>
                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotten"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
