<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.henry.ighubchurchapp.AdminRegistration">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >
        <TextView
            android:id="@+id/tvAdminDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_details"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="#ef3928"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:id="@+id/showImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            />
        <Button
            android:id="@+id/btnImport_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_image"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvSurname"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/surname"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvFirstname"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/first_name"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/phone_number"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/etFirstname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"/>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:background="@drawable/mystyle"
        />

</LinearLayout>

</ScrollView>

