<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.henry.ighubchurchapp.HomePage"
    android:background="@drawable/whiteflower"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/show_dropdown_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#059636"
                android:onClick="showDropDownMenu"
                android:text="..."
                android:textColor="#fff" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/homepageborder">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:id="@+id/btnRegister"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/register"
                    android:layout_marginRight="10dp"
                    android:onClick="showNoteDialog"
                    />
                <ImageButton
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLoin"
                    android:src="@drawable/login"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:layout_marginRight="10dp"
                    style="@style/naming"


                    />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    style="@style/naming"
                    android:src="@drawable/login"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnPastors"
                    android:src="@drawable/pastors"
                    android:layout_marginRight="10dp"
                    />
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnTithe"
                    android:src="@drawable/tithe"
                    android:layout_marginLeft="10dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/vpastor"
                    android:layout_marginRight="10dp"
                    style="@style/naming"


                    />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tithe"
                    style="@style/naming"
                    android:src="@drawable/login"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnHelp"
                    android:src="@drawable/help"
                    android:layout_marginRight="10dp"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAbout"
                    android:src="@drawable/about"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:layout_marginRight="10dp"
                    style="@style/naming"


                    />
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    style="@style/naming"
                    android:src="@drawable/login"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/btnWeeklyActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/weeklyactivity"
                    android:onClick="showTabl"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weeklyact"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>

</ScrollView>